--- a/WebApiRebelsRegistration/WebApiRebelsRegistration.csproj
+++ b/WebApiRebelsRegistration/WebApiRebelsRegistration.csproj
@@ -150,6 +150,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\PlanetsController.cs" />
     <Compile Include="Controllers\RebeldsController.cs" />
+    <Compile Include="Controllers\RegisterRebeldsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -203,6 +204,11 @@
     <Content Include="Views\Planets\Edit.cshtml" />
     <Content Include="Views\Planets\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\RegisterRebelds\Create.cshtml" />
+    <Content Include="Views\RegisterRebelds\Delete.cshtml" />
+    <Content Include="Views\RegisterRebelds\Details.cshtml" />
+    <Content Include="Views\RegisterRebelds\Edit.cshtml" />
+    <Content Include="Views\RegisterRebelds\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
